--- a/main.css
+++ b/main.css
@@ -2,3 +2,46 @@
 	padding: 0;
 	margin: 0;
 }
+body {
+	font-family: sans-serif;
+	font-weight: normal;
+	font-size: .9em;
+	color: #777;
+}
+form {
+	width: 100%;
+	margin: 0 auto;
+}
+input {
+	padding: 5px 10px;
+	margin: 10px;
+	border-radius: 5px;
+}
+	::webkit-input-placeholder {
+		text-transform: uppercase;
+		color: black;
+	}
+.container {
+	width: 100%;
+	margin: 0 auto;
+	padding: 50px 150px;
+}
+#message {
+	width: 100%;
+}
+.submit {
+	margin: 10px;
+}
+	.submit button {
+		padding: 10px 50px;
+		border: 1px solid #777;
+		color: #777;
+		background-color: transparent;
+		border-radius: 5px;
+	}
+		.submit button:hover {
+			color: #fbfbfb;
+			background-color: #777;
+			border: none;
+			cursor: pointer;
+		}
